fix print on mobile

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -75,4 +75,8 @@ main {
   .button {
     display:none;
   }
+
+  body > #root > div {
+    min-height: 0;
+  }
 }
